# uralsib_testovoe

./: .pre-commit-config.yaml  README.md  data.xlsx  main.py  pyproject.toml  test_db
db/: connect.py
services/: service.py
