[tool.poetry]
name = "uralsib-testovoe"
version = "0.1.0"
description = ""
authors = ["Tagir_Mirzametov <tm@uktlab.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
openpyxl = "^3.1.2"
xlwings = "^0.30.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
